# paraEQ

./: .gitignore  CMakeLists.txt  TODO.md  deploy.sh  gumroad-cli-og-description-request.md  gumroad-pr-og-meta-custom-html.md  gumroad-pr-reply-og-description.md  landing.html  package.sh  release.conf  start.sh  togit.sh  ui.sh
.github/workflows/: build-macos-plugins.yml
Source/: AutoparametricResonator.h  ChebyLutBuilder.cpp  ChebyLutBuilder.h  PakettiShapers.h  ParametricEqDesign.h  ParametricExcitation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ThrillMeTone.h  VaNonlinearSvf.h
features/: bpm-sync-jitter-and-ui-fixes.feature  bpm-sync-jitter-and-ui-fixes.session.md  paraeq.feature  paraeq.listing.html  paraeq.pitch.feature  paraeq.pitch.md  paraeq.report.md
scripts/: gumroad-cover.sh  gumroad-sync.sh  gumroad-upload.sh  macos-sign-notarize.sh  snap-ui.sh
thrillme_fixtures/: README.md  compare_wavs.py  generate_inputs.py
